config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-clusterip
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: hello-k8s
